# aoc

./: .gitignore  main.py  pyproject.toml
2023/: main.py
2023/solutions/: day1.py  day3.py  day5.py  day6.py  day_0.py
solutions/: 2022_01.py  2022_02.py  2022_03.py  2022_04.py  2023_01.py  2023_02.py  2023_04.py  2023_06.py  2023_07.py  2023_08.py  2023_09.py  2023_18.py
