[tool.poetry]
name = "aoc23"
version = "0.1.0"
description = ""
authors = ["leonard-mandtler <leonard.mandtler@bertelsmann-stiftung.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
advent-of-code-data = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
